A fix for both the menu toggle overlay issue and the visible sliver caused by the start here triangle.

--- a/themes/careers/sass/components/_page.scss
+++ b/themes/careers/sass/components/_page.scss
@@ -29,7 +29,16 @@ body {
 }
 
 #branding {
-  margin-bottom: 20px;
+  //margin-bottom: 20px;
+  position: relative;
+  min-height: 160px;
+
+  @media #{$responsive-nav} {
+    min-height: 230px;
+  }
+}
+
+.region-header{
   position: relative;
 }
 
